--- a/public/index.css
+++ b/public/index.css
@@ -1,14 +1,21 @@
-#img {
-  display: block;
-  margin: auto;
-  height: 128px;
-  width: 128px;
-  padding: 2rem;
+* {
+    margin: 0; padding: 0;
 }
 
-#canvas {
-  display: block;
-  margin: 2rem auto;
-  width: 540px;
-  height: 540px;
+body {
+    display: flex; justify-content: center;
+    align-items: center; height: 100vh;
+}
+
+.gameboard {
+    display: grid;
+    grid-template-columns: repeat(12, 50px);
+    grid-template-rows: repeat(12, 50px);
+}
+
+.route {
+    height: 50px; width: 50px;
+    border: 0.1px black solid;
+    color: white;
+    display: flex; justify-content: center; align-items: center;
 }
