--- a/public/index.css
+++ b/public/index.css
@@ -4,13 +4,22 @@
 
 body {
     display: flex; justify-content: center;
-    align-items: center; height: 100vh;
+    flex-direction: column;
+    align-items: center; height: 100vh; width: 80vw;
+    margin: 0 auto;
+}
+
+.panel {
+    background: black; color: white;
+    width: 80vw; height: 100px;
+    display: flex; align-items: center; justify-content: center;
+    font-size: 40px; margin-bottom: 50px;
 }
 
 .gameboard {
     display: grid;
-    grid-template-columns: repeat(12, 50px);
-    grid-template-rows: repeat(12, 50px);
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
 }
 
 .route {
@@ -18,4 +27,10 @@ body {
     border: 0.1px black solid;
     color: white;
     display: flex; justify-content: center; align-items: center;
+}
+
+.snake-part {
+    height: 40px; width: 40px; 
+    border-radius: 50%;
+    display: flex; align-items: center; justify-content: center;
 }
