--- a/public/index.css
+++ b/public/index.css
@@ -10,16 +10,19 @@ body {
 }
 
 .panel {
-    background: black; color: white;
-    width: 80vw; height: 100px;
+    background: white; color: grey;
+    box-shadow: 2px 2px 5px grey;
+    border-radius: 5px;
+    width: 50vw; height: 100px;
     display: flex; align-items: center; justify-content: center;
-    font-size: 40px; margin-bottom: 50px;
+    font-size: 40px; margin-bottom: 50px; font-family: sans-serif;
 }
 
 .gameboard {
-    display: grid;
+    display: grid; box-shadow: 2px 2px 5px grey;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(12, 1fr);
+    margin-bottom: 30px;
 }
 
 .route {
@@ -30,7 +33,19 @@ body {
 }
 
 .snake-part {
-    height: 40px; width: 40px; 
+    height: 40px; width: 40px; font-size: 25px;
     border-radius: 50%;
     display: flex; align-items: center; justify-content: center;
+}
+
+.buttons {
+    display: grid;
+    grid-template-columns                                                                     : repeat(3, 1fr);
+}
+
+.btn {
+    height: 55px; width: 55px;
+    border-radius: 50%;
+    border: 1px solid black;
+    font-size: 35px;
 }
