--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,12 +13,14 @@ body {
     background: white; color: grey;
     box-shadow: 2px 2px 5px grey;
     border-radius: 5px;
-    width: 50vw; height: 60px;
+    width: 50vw; height: 70px;
     display: flex; align-items: center; justify-content: center;
-    font-size: 30px; margin-bottom: 50px; font-family: sans-serif;
+    font-size: 30px; margin-bottom: 30px; font-family: sans-serif;
 }
 
 .gameboard {
+    width: 90vw; height: 90vw;
+    max-width: 750px; max-height: 750px; 
     display: grid; box-shadow: 2px 2px 5px grey;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(12, 1fr);
@@ -26,14 +28,14 @@ body {
 }
 
 .route {
-    height: 50px; width: 50px;
+    min-height: 20px; min-width: 20px;
     border: 0.1px black solid;
     color: white;
     display: flex; justify-content: center; align-items: center;
 }
 
 .snake-part {
-    height: 40px; width: 40px; font-size: 25px;
+    min-height: 80%; min-width: 80%; font-size: 18px;
     border-radius: 50%;
     display: flex; align-items: center; justify-content: center;
 }
